--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "dependencies": {
     "normalize.css": "^8.0.1"
-  }
+  },
+  "name": "html_css_mosh_part3",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AsmaaMoallim/Moshified_a-cloud-hosting-website_FrontEnd.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AsmaaMoallim/Moshified_a-cloud-hosting-website_FrontEnd/issues"
+  },
+  "homepage": "https://github.com/AsmaaMoallim/Moshified_a-cloud-hosting-website_FrontEnd#readme",
+  "description": ""
 }
